--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,24 +3,31 @@ repo: monitor
 
 sites:
   - name: ID 方糖通行证
+    slug: id
     url: $ID_HEALTH
     icon: "https://webstatic.rdpstudio.top/global/branding/static/fangtang/favicon.png"
   - name: OAuth2 方糖通行证开放平台授权登录
+    slug: o-auth2
     url: $OAUTH2_HEALTH
     icon: "https://webstatic.rdpstudio.top/global/branding/static/fangtang/favicon.png"
   - name: CoreTree 核心树
+    slug: core-tree
     url: $CORETREE_HEALTH
     icon: "https://webstatic.rdpstudio.top/global/branding/static/fangtang/favicon.png"
   - name: AutoPatch 下载服务器
+    slug: auto-patch
     url: $AUTOPATCH_HEALTH
     icon: "https://webstatic.rdpstudio.top/global/branding/static/fangtang/favicon.png"
   - name: Community 方糖社区
+    slug: community
     url: https://com.rdpstudio.top
     icon: "https://uploadstatic.tsocial.eu.org/uploads/2023/4/upload_20230426_UAoxjICux958HZuch.png"
   - name: HyperChat
+    slug: hyper-chat
     url: $HYPERCHAT_HEALTH
     icon: "https://webstatic.rdpstudio.top/global/branding/static/hyperchat/icon.png"
   - name: HiNet Link API
+    slug: hi-net-link-api
     url: $HINETLINK_HEALTH
     icon: "https://uploadstatic.tsocial.eu.org/uploads/2023/4/upload_20230426_aXkco0X99xofaxz90X9.png"
 
@@ -33,6 +40,8 @@ status-website:
   navbar:
     - title: 状态站
       href: /
+    - title: GitHub
+      href: https://github.com/$OWNER/$REPO
     - title: 通行证用户中心
       href: https://id.rdpstudio.top
   css: 'body {padding-bottom: 0!important;}'
